--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0"
   },
