--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0"
   },
