--- a/frontend-user/package.json
+++ b/frontend-user/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
     "luxon": "^3.4.4",
     "prop-types": "^15.8.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5"
   },
   "devDependencies": {
