--- a/frontend-author/package.json
+++ b/frontend-author/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
     "he": "^1.2.0",
     "prop-types": "^15.8.1",
