--- a/frontend-author/package.json
+++ b/frontend-author/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
+    "dompurify": "^3.1.6",
     "he": "^1.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
