--- a/frontend-author/package.json
+++ b/frontend-author/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-query-devtools": "^5.51.1",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
     "dompurify": "^3.1.6",
