--- a/frontend-author/package.json
+++ b/frontend-author/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^8.18.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.1",
