--- a/frontend-author/package.json
+++ b/frontend-author/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sentry/react": "^8.18.0",
+    "@sentry/vite-plugin": "^2.21.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.1",
