install the express compression package

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "backend/*",
     "frontend-author/*",
     "frontend-user/*"
-  ]
+  ],
+  "dependencies": {
+    "compression": "^1.7.4"
+  }
 }
